fixes circle z-index; tweaks floating menu css

--- a/portfolio-two/src/styles.scss
+++ b/portfolio-two/src/styles.scss
@@ -234,6 +234,7 @@ a:active {
     position: fixed;
     top: 0;
     width: 100%;
+    z-index: 1;
 }
 
 .headspace-solid {
@@ -249,6 +250,8 @@ a:active {
     font-size: 50px;
     max-width: 1000px;
     margin: auto;
+    position: relative;
+    z-index: 2;
 }
 
 .subheading {
@@ -258,10 +261,13 @@ a:active {
 /*|| Floating Menu */
 .float-menu {
     position: fixed;
-    top: 50px;
-    right: 20px;
+    top: 120px;
+    right: 50px;
     z-index: 2;
     line-height: 2;
+    background-color: rgba(0, 0, 0, 0.295);
+    box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.295);
+    padding: 5px 10px 5px 5px;
 }
 
 .menu-link {
@@ -306,10 +312,11 @@ a:active {
     width: 400px;
     height: 400px;
     border-radius: 50%;
-    background-color: blue;
     @include centered();
     position: relative;
     top: 100px;
+    background-image: url("assets/marspic.jpg");
+    z-index: 0;
 }
 
 .links {
